# pairandomizer-pwa

./: .gitignore  Cargo.toml  Justfile  LICENSE  flake.nix  index.html  manifest.webmanifest
js/: sw.js
res/json/: classic.json  extrem_freizeit_de.json  freizeitpark_de.json  freizeitpark_en.json  index.json  stadtausflug_de.json  stadtausflug_nacht_de.json  urlaub_de.json  urlaub_en.json
scss/: index.scss
src/: app.rs  main.rs  modal.rs  pairandomizer_core.rs  pwa.rs  settings.rs
src/app/: mod.rs  navbar.rs
